--- a/IPMS_KLK.iOS/IPMS_KLK.iOS.csproj
+++ b/IPMS_KLK.iOS/IPMS_KLK.iOS.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
+    <Compile Include="Persistence\SQLiteDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -145,4 +146,5 @@
       <Name>IPMS_KLK</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
 </Project>
