add view model for latexFC instead of writing inside the code behind xml

--- a/IPMS_KLK/IPMS_KLK.csproj
+++ b/IPMS_KLK/IPMS_KLK.csproj
@@ -106,6 +106,9 @@
     <EmbeddedResource Update="Views\MainMenuOptions\RubberReceptionMenuOptions\LatexFC.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\MainMenuOptions\RubberReceptionMenuOptions\LatexFC2.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MainMenuOptions\RubberReceptionMenuOptions\LatexWeighing.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
