--- a/IPMS_KLK.Android/IPMS_KLK.Android.csproj
+++ b/IPMS_KLK.Android/IPMS_KLK.Android.csproj
@@ -166,6 +166,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\printer.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\blue.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ui1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
