--- a/IPMS_KLK/IPMS_KLK.csproj
+++ b/IPMS_KLK/IPMS_KLK.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <None Remove="Resources\Fonts\BebasNeue-Regular.otf" />
     <None Remove="Resources\Fonts\coolvetica.ttf" />
+    <None Remove="Resources\Fonts\KeepCalm-Medium.ttf" />
     <None Remove="Resources\Fonts\SFUIDisplay-Black.otf" />
     <None Remove="Resources\Fonts\SFUIDisplay-Bold.ttf" />
     <None Remove="Resources\Fonts\SFUIDisplay-Light.ttf" />
@@ -24,6 +25,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Fonts\BebasNeue-Regular.otf" />
     <EmbeddedResource Include="Resources\Fonts\coolvetica.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\KeepCalm-Medium.ttf" />
     <EmbeddedResource Include="Resources\Fonts\SFUIDisplay-Black.otf" />
     <EmbeddedResource Include="Resources\Fonts\SFUIDisplay-Bold.ttf" />
     <EmbeddedResource Include="Resources\Fonts\SFUIDisplay-Light.ttf" />
