updated UI for Rubber Reception,FFb Counting and General Worker 05/04/2021

--- a/IPMS_KLK/IPMS_KLK.csproj
+++ b/IPMS_KLK/IPMS_KLK.csproj
@@ -14,8 +14,11 @@
     <None Remove="Resources\bluehouse.json" />
     <None Remove="Resources\bluelaptopworking.json" />
     <None Remove="Resources\carousel.json" />
+    <None Remove="Resources\character.json" />
+    <None Remove="Resources\construction.json" />
     <None Remove="Resources\dashboard.json" />
     <None Remove="Resources\developer.json" />
+    <None Remove="Resources\doctors.json" />
     <None Remove="Resources\farmer.json" />
     <None Remove="Resources\Fonts\BebasNeue-Regular.otf" />
     <None Remove="Resources\Fonts\coolvetica.ttf" />
@@ -28,25 +31,48 @@
     <None Remove="Resources\Fonts\SFUIDisplay-Regular.otf" />
     <None Remove="Resources\Fonts\SFUIDisplay-Thin.otf" />
     <None Remove="Resources\Fonts\Theater_Bold.otf" />
+    <None Remove="Resources\garbage.json" />
     <None Remove="Resources\icon-animation.json" />
     <None Remove="Resources\illustration.json" />
+    <None Remove="Resources\inbox-folder.json" />
+    <None Remove="Resources\kid-on-laptop.json" />
+    <None Remove="Resources\landscape.json" />
+    <None Remove="Resources\lock-animation.json" />
+    <None Remove="Resources\login-anim.json" />
     <None Remove="Resources\login.json" />
     <None Remove="Resources\lottie-animation.json" />
     <None Remove="Resources\lumberjack.json" />
     <None Remove="Resources\messaging.json" />
+    <None Remove="Resources\movie.json" />
     <None Remove="Resources\programming.json" />
+    <None Remove="Resources\rocket.json" />
     <None Remove="Resources\searching.json" />
     <None Remove="Resources\searchscroll.json" />
     <None Remove="Resources\task.json" />
     <None Remove="Resources\trusted-sites.json" />
     <None Remove="Resources\user-testing.json" />
     <None Remove="Resources\welcome.json" />
+    <None Remove="Resources\wokrk-at-night.json" />
     <None Remove="Resources\womenonphone.json" />
     <None Remove="Resources\workers.json" />
     <None Remove="Resources\workfromhome.json" />
+    <None Remove="Resources\zezinho.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\doctors.json" />
+    <EmbeddedResource Include="Resources\kid-on-laptop.json" />
+    <EmbeddedResource Include="Resources\landscape.json" />
+    <EmbeddedResource Include="Resources\wokrk-at-night.json" />
+    <EmbeddedResource Include="Resources\construction.json" />
+    <EmbeddedResource Include="Resources\login-anim.json" />
+    <EmbeddedResource Include="Resources\inbox-folder.json" />
+    <EmbeddedResource Include="Resources\rocket.json" />
+    <EmbeddedResource Include="Resources\lock-animation.json" />
+    <EmbeddedResource Include="Resources\garbage.json" />
+    <EmbeddedResource Include="Resources\zezinho.json" />
+    <EmbeddedResource Include="Resources\character.json" />
+    <EmbeddedResource Include="Resources\movie.json" />
     <EmbeddedResource Include="Resources\lumberjack.json" />
     <EmbeddedResource Include="Resources\icon-animation.json" />
     <EmbeddedResource Include="Resources\trusted-sites.json" />
